chrome/bar/urlbar.css
/* Remove search engines from the search bar */
#urlbar .search-one-offs:not([hidden]) {
  display: none !important;
}

/* Center text on urlbar */
#urlbar:not([focused]) #urlbar-input,
#urlbar:not([focused]) .urlbar-input {
  text-align: center !important;
}

#urlbar-input-container {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center !important;
}

/* Add color to urlbar border when urlbar is focused */
#urlbar-container {
  --toolbar-field-focus-border-color: #c38f8f !important;
}

/* Background color of the URL selection menu */
#urlbar-results .urlbarView-row[selected] {
  background-color: #c38f8f !important;
}

/* Text color of the full URL besides title in the URL selection menu */
#urlbar-results :is(.urlbarView-tags, .urlbarView-action, .urlbarView-url) {
  color: #c38f8f !important;
}

/* Text color of the URL selection menu */
#urlbar-results .urlbarView-row[selected] .urlbarView-title {
  color: #ffffff !important;
}

/* Based on: Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/urlbar_connection_type_background_colors.css */
/* Add a colored overlay to urlbar based on the type of the connection */

@keyframes colorCycle {
  0% {
    color: rgb(255, 0, 0);
  }
  8.33% {
    color: rgb(255, 127, 0);
  }
  16.66% {
    color: rgb(255, 255, 0);
  }
  25% {
    color: rgb(127, 255, 0);
  }
  33.33% {
    color: rgb(0, 255, 0);
  }
  41.66% {
    color: rgb(0, 255, 127);
  }
  50% {
    color: rgb(0, 255, 255);
  }
  58.33% {
    color: rgb(0, 127, 255);
  }
  66.66% {
    color: rgb(0, 0, 255);
  }
  75% {
    color: rgb(127, 0, 255);
  }
  83.33% {
    color: rgb(255, 0, 255);
  }
  91.66% {
    color: rgb(255, 0, 127);
  }
  100% {
    color: rgb(255, 0, 0);
  }
}

/* For normal pages */
#identity-box[pageproxystate="valid"] ~ .urlbar-input-box {
  animation: colorCycle 20s linear infinite;
}

/* Mixed content including neterror */
#identity-box[pageproxystate="valid"].unknownIdentity ~ .urlbar-input-box {
  color: orange;
}

/* http: and potentially some other insecure connections like ftp: */
#identity-box[pageproxystate="valid"].notSecure ~ .urlbar-input-box {
  color: orangered;
}

/* Extension pages */
#identity-box[pageproxystate="valid"].extensionPage ~ .urlbar-input-box {
  color: violet;
}

/* Internal about: and chrome:// urls (includes reader-view) */
#identity-box[pageproxystate="valid"].localResource ~ .urlbar-input-box,
#identity-box[pageproxystate="valid"].chromeUI ~ .urlbar-input-box {
  color: dodgerblue;
}

